--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgres://dtyytvja:jqVE3R9FyspFgsn2omQchcG9QvIluWs0@flora.db.elephantsql.com/dtyytvja
+API_KEY=b9c65c4f0be1465a954690fa6055e5be
